CPP_Classes/CPP_Non-AI.h

extern "C" __declspec(dllexport)
HMM* HMM_Open() {
	HMM* cPtr = new HMM();
	return cPtr;
}
extern "C" __declspec(dllexport)
int* HMM_Close(HMM* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* HMM_Run(HMM* cPtr, int* bgrPtr, int rows, int cols, int channels)
{
	cPtr->src = Mat(rows, cols, (channels == 3) ? CV_8UC3 : CV_8UC1, bgrPtr);
	cPtr->Run();
	return (int*)cPtr->output.data;
}
extern "C" __declspec(dllexport)
ParticleFilterTest* ParticleFilterTest_Open(char* dataDirName, int rows, int cols) {
	std::string dataDir(dataDirName);
	ParticleFilterTest* cPtr = new ParticleFilterTest(dataDir);
	cPtr->fullImage = Mat(rows, cols, CV_8UC3);
	return cPtr;
}
extern "C" __declspec(dllexport)
int* ParticleFilterTest_Close(ParticleFilterTest* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* ParticleFilterTest_Run(ParticleFilterTest* cPtr)
{
	cPtr->Run();
	return (int*)cPtr->fullImage.data;
}
extern "C" __declspec(dllexport)
int* Fuzzy_Run(Fuzzy* cPtr, int* grayPtr, int rows, int cols)
{
	cPtr->src = Mat(rows, cols, CV_8UC1, grayPtr);
	cPtr->Run();
	return (int*)cPtr->dst.data;
}
extern "C" __declspec(dllexport)
Guess_Depth* Guess_Depth_Open() {
	Guess_Depth* cPtr = new Guess_Depth();
	return cPtr;
}
extern "C" __declspec(dllexport)
void Guess_Depth_Close(Guess_Depth* cPtr)
{
	delete cPtr;
}
extern "C" __declspec(dllexport)
int* Guess_Depth_RunCPP(Guess_Depth* cPtr, int* dataPtr, int rows, int cols)
{
	cPtr->src = Mat(rows, cols, CV_32FC3, dataPtr);
	cPtr->RunCPP();
	return (int*)cPtr->src.data;
}
extern "C" __declspec(dllexport)
Guess_ImageEdges* Guess_ImageEdges_Open() {
	Guess_ImageEdges* cPtr = new Guess_ImageEdges();
	return cPtr;
}
extern "C" __declspec(dllexport)
void Guess_ImageEdges_Close(Guess_ImageEdges* cPtr)
{
	delete cPtr;
}
extern "C" __declspec(dllexport)
int* Guess_ImageEdges_RunCPP(Guess_ImageEdges* cPtr, int* dataPtr, int rows, int cols, int maxDistanceToEdge)
{
	cPtr->pc = Mat(rows, cols, CV_32FC3, dataPtr);
	cPtr->RunCPP(maxDistanceToEdge);
	return (int*)cPtr->pc.data;
}
// https://docs.opencv.org/3.4/d1/d1d/tutorial_histo3D.html
// https://docs.opencv.org/trunk/d1/d1d/tutorial_histo3D.html
// When run in VB.Net the histogram output has rows = -1 and cols = -1
// The rows and cols are both -1 so I had assumed there was a bug but the data is accessible with the at method.
// If you attempt the same access to the data in managed code, it does not work (AFAIK).
extern "C" __declspec(dllexport)
float* Hist3Dcolor_Run(int* bgrPtr, int rows, int cols, int bins)
{
	float hRange[] = { 0, 256 }; // ranges are exclusive in the top of the range, hence 256
	const float* range[] = { hRange, hRange, hRange };
	int hbins[] = { bins, bins, bins };
	int channels[] = { 0, 1, 2 };
	Mat src = Mat(rows, cols, CV_8UC3, bgrPtr);

	static Mat histogram;
	calcHist(&src, 1, channels, Mat(), histogram, 3, hbins, range);

	return (float*)histogram.data;
}
// https://docs.opencv.org/3.4/d1/d1d/tutorial_histo3D.html
// https://docs.opencv.org/trunk/d1/d1d/tutorial_histo3D.html
// When run in VB.Net the histogram output has rows = -1 and cols = -1
// The rows and cols are both -1 so I had assumed there was a bug but the data is accessible with the at method.
// If you attempt the same access to the data in managed code, it does not work (AFAIK).
extern "C" __declspec(dllexport)
uchar* BackProjectBGR_Run(int* bgrPtr, int rows, int cols, int bins, float threshold)
{
	Mat input = Mat(rows, cols, CV_8UC3, bgrPtr);
	float hRange0[] = { 0, 256 };
	float hRange1[] = { 0, 256 };
	float hRange2[] = { 0, 256 };
	const float* range[] = { hRange0, hRange1, hRange2 };
	int hbins[] = { bins, bins, bins };
	int channels[] = { 0, 1, 2 };

	static Mat histogram;
	calcHist(&input, 1, channels, Mat(), histogram, 3, hbins, range); // for 3D histograms, all 3 bins must be equal.

	float* hist = (float*)histogram.data;
	for (int i = 0; i < bins * bins * bins; i++)
	{
		if (hist[i] < threshold) hist[i] = 0;
	}

	calcBackProject(&input, 1, channels, histogram, newImage, range);

	return (uchar*)newImage.data;
}
extern "C" __declspec(dllexport)
uchar* Hist3Dcloud_Run(int* inputPtr, int rows, int cols, int bins,
	float minX, float minY, float minZ,
	float maxX, float maxY, float maxZ)
{
	Mat input = Mat(rows, cols, CV_32FC3, inputPtr);
	float hRange0[] = { float(minX), float(maxX) };
	float hRange1[] = { float(minY), float(maxY) };
	float hRange2[] = { float(minZ), float(maxZ) };
	const float* range[] = { hRange0, hRange1, hRange2 };
	int hbins[] = { bins, bins, bins };
	int channel[] = { 0, 1, 2 };

	static Mat histogram;
	calcHist(&input, 1, channel, Mat(), histogram, 3, hbins, range, true, false); // for 3D histograms, all 3 bins must be equal.

	return (uchar*)histogram.data;
}
extern "C" __declspec(dllexport)
uchar* BackProjectCloud_Run(int* inputPtr, int rows, int cols, int bins, float threshold,
	float minX, float minY, float minZ,
	float maxX, float maxY, float maxZ)
{
	Mat input = Mat(rows, cols, CV_32FC3, inputPtr);
	float hRange0[] = { float(minX), float(maxX) };
	float hRange1[] = { float(minY), float(maxY) };
	float hRange2[] = { float(minZ), float(maxZ) };
	const float* range[] = { hRange0, hRange1, hRange2 };
	int hbins[] = { bins, bins, bins };
	int channels[] = { 0, 1, 2 };

	static Mat histogram;
	calcHist(&input, 1, channels, Mat(), histogram, 3, hbins, range); // for 3D histograms, all 3 bins must be equal.

	float* hist = (float*)histogram.data;
	for (int i = 0; i < bins * bins * bins; i++)
	{
		if (hist[i] < threshold) hist[i] = 0; else hist[i] = 255; // building a mask
	}

	Mat mask32f;
	calcBackProject(&input, 1, channels, histogram, mask32f, range);
	mask32f.convertTo(mask, CV_8U);

	return (uchar*)mask.data;
}
extern "C" __declspec(dllexport)
Hist_1D* Hist_1D_Open() {
	Hist_1D* cPtr = new Hist_1D();
	return cPtr;
}
extern "C" __declspec(dllexport)
float Hist_1D_Sum(Hist_1D* cPtr) {
	Scalar count = sum(cPtr->histogram);
	return count[0];
}
extern "C" __declspec(dllexport)
void Hist_1D_Close(Hist_1D* cPtr)
{
	delete cPtr;
}
extern "C" __declspec(dllexport)
int* Hist_1D_RunCPP(Hist_1D* cPtr, int* dataPtr, int rows, int cols, int bins)
{
	cPtr->src = Mat(rows, cols, CV_8UC1, dataPtr);
	cPtr->RunCPP(bins);
	return (int*)cPtr->histogram.data;
}
extern "C" __declspec(dllexport)
KMeans_MultiGaussian* KMeans_MultiGaussian_Open() {
	KMeans_MultiGaussian* cPtr = new KMeans_MultiGaussian();
	return cPtr;
}
extern "C" __declspec(dllexport)
int* KMeans_MultiGaussian_Close(KMeans_MultiGaussian* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* KMeans_MultiGaussian_RunCPP(KMeans_MultiGaussian* cPtr, int rows, int cols)
{
	cPtr->dst = Mat(rows, cols, CV_8UC3);
	cPtr->dst.setTo(0);
	cPtr->RunCPP();
	return (int*)cPtr->dst.data;
}
extern "C" __declspec(dllexport)
Kmeans_Simple* Kmeans_Simple_Open() {
	Kmeans_Simple* cPtr = new Kmeans_Simple();
	return cPtr;
}
extern "C" __declspec(dllexport)
int* Kmeans_Simple_Close(Kmeans_Simple* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* Kmeans_Simple_RunCPP(Kmeans_Simple* cPtr, int* dataPtr, int rows, int cols, float minVal, float maxVal)
{
	cPtr->src = Mat(rows, cols, CV_32F, dataPtr);
	cPtr->dst = Mat(rows, cols, CV_8UC3);
	cPtr->RunCPP(minVal, maxVal);
	return (int*)cPtr->dst.data;
}
extern "C" __declspec(dllexport) ML_RemoveDups* ML_RemoveDups_Open() { ML_RemoveDups* cPtr = new ML_RemoveDups(); return cPtr; }
extern "C" __declspec(dllexport) int ML_RemoveDups_GetCount(ML_RemoveDups* cPtr) { return cPtr->index - 1; }
extern "C" __declspec(dllexport) int* ML_RemoveDups_Close(ML_RemoveDups* cPtr) { delete cPtr; return (int*)0; }
extern "C" __declspec(dllexport) int* ML_RemoveDups_Run(ML_RemoveDups* cPtr, int* dataPtr, int rows, int cols, int type)
{
	cPtr->src = Mat(rows, cols, type, dataPtr);
	cPtr->Run();
	return (int*)cPtr->dst.data;
}
extern "C" __declspec(dllexport)
MSER_Interface* MSER_Open(int delta, int minArea, int maxArea, float maxVariation, float minDiversity, int maxEvolution, float areaThreshold,
	float minMargin, int edgeBlurSize, int pass2Setting)
{
	MSER_Interface* cPtr = new MSER_Interface(delta, minArea, maxArea, maxVariation, minDiversity, maxEvolution, areaThreshold, minMargin,
		edgeBlurSize, pass2Setting);
	return cPtr;
}
extern "C" __declspec(dllexport)
void MSER_Close(MSER_Interface* cPtr)
{
	delete cPtr;
}
extern "C" __declspec(dllexport)
int* MSER_Rects(MSER_Interface* cPtr)
{
	return (int*)&cPtr->containers[0];
}
extern "C" __declspec(dllexport)
int* MSER_FloodPoints(MSER_Interface* cPtr)
{
	return (int*)&cPtr->floodPoints[0];
}
extern "C" __declspec(dllexport)
int* MSER_MaskCounts(MSER_Interface* cPtr)
{
	return (int*)&cPtr->maskCounts[0];
}
extern "C" __declspec(dllexport)
int MSER_Count(MSER_Interface* cPtr)
{
	return (int)cPtr->containers.size();
}
extern "C" __declspec(dllexport)
int* MSER_RunCPP(MSER_Interface* cPtr, int* dataPtr, int rows, int cols, int channels)
{
	cPtr->src = Mat(rows, cols, (channels == 3) ? CV_8UC3 : CV_8UC1, dataPtr);
	cPtr->dst = Mat(rows, cols, CV_8UC1);
	cPtr->RunCPP();
	return (int*)cPtr->dst.data;
}
extern "C" __declspec(dllexport) PCA_Prep* PCA_Prep_Open() { PCA_Prep* cPtr = new PCA_Prep(); return cPtr; }
extern "C" __declspec(dllexport) int* PCA_Prep_Close(PCA_Prep* cPtr) { delete cPtr; return (int*)0; }
extern "C" __declspec(dllexport) int PCA_Prep_GetCount(PCA_Prep* cPtr) { return int(cPtr->pcaList.size()); }
extern "C" __declspec(dllexport) int* PCA_Prep_Run(PCA_Prep* cPtr, int* pointCloudData, int rows, int cols)
{
	cPtr->src = Mat(rows, cols, CV_32FC3, pointCloudData);
	cPtr->Run();
	return (int*)cPtr->pcaList.data();
}
extern "C" __declspec(dllexport)
WhiteBalance* WhiteBalance_Open(float ppx, float ppy, float fx, float fy)
{
	WhiteBalance* cPtr = new WhiteBalance();
	return cPtr;
}
extern "C" __declspec(dllexport)
int* WhiteBalance_Close(WhiteBalance* cPtr)
{
	delete cPtr;
	return (int*)0;
}
extern "C" __declspec(dllexport)
int* WhiteBalance_Run(WhiteBalance* cPtr, int* rgb, int rows, int cols, float thresholdVal)
{
	cPtr->output = Mat(rows, cols, CV_8UC3);
	cPtr->src = Mat(rows, cols, CV_8UC3, rgb);
	cPtr->Run(thresholdVal);
	return (int*)cPtr->output.data;
}
extern "C" __declspec(dllexport)
Neighbors1* Neighbors1_Open() {
	Neighbors1* cPtr = new Neighbors1();
	return cPtr;
}
extern "C" __declspec(dllexport)
void Neighbors1_Close(Neighbors1* cPtr)
{
	delete cPtr;
}
extern "C" __declspec(dllexport)
int* Neighbors1_CellData(Neighbors1* cPtr)
{
	return (int*)&cPtr->cellData[0];
}
extern "C" __declspec(dllexport)
int* Neighbors1_Points(Neighbors1* cPtr)
{
	return (int*)&cPtr->nPoints[0];
}
extern "C" __declspec(dllexport)
int Neighbors1_RunCPP(Neighbors1* cPtr, int* dataPtr, int rows, int cols)
{
	cPtr->src = Mat(rows, cols, CV_8UC1, dataPtr);
	cPtr->RunCPP();
	return (int)cPtr->nPoints.size();
}
extern "C" __declspec(dllexport)
Neighbor2* Neighbor2_Open() {
	Neighbor2* cPtr = new Neighbor2();
	return cPtr;
}
extern "C" __declspec(dllexport)
void Neighbor2_Close(Neighbor2* cPtr)
{
	delete cPtr;
}
extern "C" __declspec(dllexport)
int* Neighbor2_Points(Neighbor2* cPtr)
{
	return (int*)&cPtr->nPoints[0];
}
extern "C" __declspec(dllexport)
int Neighbor2_RunCPP(Neighbor2* cPtr, int* dataPtr, int rows, int cols)
{
	cPtr->src = Mat(rows, cols, CV_8UC1, dataPtr);
	cPtr->RunCPP();
	return (int)cPtr->nPoints.size();
}