CS_Classes/CS_Externs.cs


        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Fuzzy_Run(IntPtr cPtr, IntPtr bgrPtr, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Guess_Depth_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Guess_Depth_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Guess_Depth_RunCPP(IntPtr cPtr, IntPtr dataPtr, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Guess_ImageEdges_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Guess_ImageEdges_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Guess_ImageEdges_RunCPP(IntPtr cPtr, IntPtr dataPtr, int rows, int cols, int maxDistanceToEdge);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Hist_1D_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Hist_1D_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Hist_1D_RunCPP(IntPtr cPtr, IntPtr dataPtr, int rows, int cols, int bins);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern float Hist_1D_Sum(IntPtr cPtr);

        public static float histDelta = 0.00001f;


        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Hist3Dcolor_Run(IntPtr bgrPtr, int rows, int cols, int bins);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr BackProjectBGR_Run(IntPtr bgrPtr, int rows, int cols, int bins, float threshold);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Hist3Dcloud_Run(IntPtr pcPtr, int rows, int cols, int bins, float minX, float minY, float minZ, float maxX, float maxY, float maxZ);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr BackProjectCloud_Run(IntPtr pcPtr, int rows, int cols, int bins, float threshold, float minX, float minY, float minZ, float maxX, float maxY, float maxZ);


        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr HMM_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr HMM_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr HMM_Run(IntPtr HMMPtr, IntPtr bgrPtr, int rows, int cols, int channels);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KMeans_MultiGaussian_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KMeans_MultiGaussian_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr KMeans_MultiGaussian_RunCPP(IntPtr cPtr, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Kmeans_Simple_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Kmeans_Simple_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Kmeans_Simple_RunCPP(IntPtr cPtr, IntPtr dataPtr, int rows, int cols, float minVal, float maxVal);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ML_RemoveDups_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ML_RemoveDups_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int ML_RemoveDups_GetCount(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ML_RemoveDups_Run(IntPtr cPtr, IntPtr dataPtr, int rows, int cols, int type);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr MSER_Open(int delta, int minArea, int maxArea, float maxVariation, float minDiversity,
                                              int maxEvolution, float areaThreshold, float minMargin, int edgeBlurSize,
                                              int pass2Setting);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void MSER_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr MSER_Rects(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr MSER_FloodPoints(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr MSER_MaskCounts(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int MSER_Count(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr MSER_RunCPP(IntPtr cPtr, IntPtr dataPtr, int rows, int cols, int channels);

        public static bool removeZeroNeighbors = true;

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Neighbors1_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Neighbors1_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Neighbors1_CellData(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Neighbors1_Points(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Neighbors1_RunCPP(IntPtr cPtr, IntPtr dataPtr, int rows, int cols);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Neighbor2_Open();

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern void Neighbor2_Close(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr Neighbor2_Points(IntPtr cPtr);

        [DllImport("CPP_Classes.dll", CallingConvention = CallingConvention.Cdecl)]
        public static extern int Neighbor2_RunCPP(IntPtr cPtr, IntPtr dataPtr, int rows, int cols);


        public Mat opticalFlow_Dense(Mat oldGray, Mat gray, float pyrScale, int levels, int winSize, int iterations,
                        float polyN, float polySigma, OpticalFlowFlags OpticalFlowFlags)
        {
            Mat flow = new Mat();
            if (pyrScale >= 1) pyrScale = 0.99f;

            if (oldGray.Size() != gray.Size()) oldGray = gray.Clone();

            Cv2.CalcOpticalFlowFarneback(oldGray, gray, flow, pyrScale, levels, winSize, iterations, (int)polyN, polySigma, OpticalFlowFlags);
            Mat[] flowVec = flow.Split();

            Mat hsv = new Mat();
            Mat hsv0 = new Mat();
            Mat hsv1 = new Mat(gray.Rows, gray.Cols, MatType.CV_8UC1, new Scalar(255));
            Mat hsv2 = new Mat();

            Mat magnitude = new Mat();
            Mat angle = new Mat();
            Cv2.CartToPolar(flowVec[0], flowVec[1], magnitude, angle);
            angle.ConvertTo(hsv0, MatType.CV_8UC1, 180 / Math.PI / 2);
            Cv2.Normalize(magnitude, hsv2, 0, 255, NormTypes.MinMax, MatType.CV_8UC1);

            Mat[] hsvVec = { hsv0, hsv1, hsv2 };
            Cv2.Merge(hsvVec, hsv);
            return hsv;
        }

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr OpticalFlow_CPP_Open();

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr OpticalFlow_CPP_Close(IntPtr sPtr);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr OpticalFlow_CPP_Run(IntPtr sPtr, IntPtr bgrPtr, int rows, int cols);

        public void calcOpticalFlowPyrLK_Native(Mat gray1, Mat gray2, Mat features1, Mat features2)
        {
            GCHandle hGray1;
            GCHandle hGray2;
            GCHandle hF1;
            GCHandle hF2;

            byte[] grayData1 = new byte[gray1.Total()];
            byte[] grayData2 = new byte[gray2.Total()];
            byte[] fData1 = new byte[features1.Total() * features1.ElemSize()];
            byte[] fData2 = new byte[features2.Total() * features2.ElemSize()];
            hGray1 = GCHandle.Alloc(grayData1, GCHandleType.Pinned);
            hGray2 = GCHandle.Alloc(grayData2, GCHandleType.Pinned);
            hF1 = GCHandle.Alloc(fData1, GCHandleType.Pinned);
            hF2 = GCHandle.Alloc(fData2, GCHandleType.Pinned);
        }

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ParticleFilterTest_Open(string matlabFileName, int rows, int cols);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ParticleFilterTest_Close(IntPtr cPtr);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr ParticleFilterTest_Run(IntPtr pfPtr);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr PCA_Prep_Open();

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern void PCA_Prep_Close(IntPtr cPtr);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern int PCA_Prep_GetCount(IntPtr cPtr);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr PCA_Prep_Run(IntPtr cPtr, IntPtr dataPtr, int rows, int cols);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr WhiteBalance_Open();

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr WhiteBalance_Close(IntPtr cPtr);

        [DllImport(("CPP_Classes.dll"), CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr WhiteBalance_Run(IntPtr wPtr, IntPtr rgb, int rows, int cols, float thresholdVal);
